@@ -1,3 +1,7 @@
+2019-08-27  Mark Wielaard  <mark@klomp.org>
+
+	* run-readelf-test2.sh: Add -x num testcase.
+
 2019-08-29  Mark Wielaard  <mark@klomp.org>
 
 	* test-subr.sh (self_test_files_exe): replace elfcmp, objdump and
