@@ -1,3 +1,8 @@
+2019-08-27  Mark Wielaard  <mark@klomp.org>
+
+	* readelf.c (for_each_section_argument): Call (*dump) also for
+	section numbers.
+
 2019-08-26  Mark Wielaard  <mark@klomp.org>
 
 	* nm.c (show_symbols): Remember nentries_orig and check before
